# RustMP

./: Cargo.toml  README.md
benches/: factorial.rs
omp/: Makefile
omp/src/: main.c
src/: lib.rs  sysinfo.rs  threadpool.rs
